# ancp-bids

./: .codespellrc  .gitattributes  .gitignore  .project  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: generate_schema_workflow.yml  publish-pypi.yml  python-package.yml  testing.yml
ancpbids/: __init__.py  _version.py  dsloader.py  dssaver.py  files.py  lazy_load.py  model.py  model_base.py  model_v1_10_0.py  model_v1_7_0.py  model_v1_7_1.py  model_v1_8_0.py  model_v1_9_0.py  plugin.py  pybids_compat.py  query.py  schema.py  torch.py  utils.py  validator.py
ancpbids/data/: bids_graph_schema.yaml  bids_v1_7_0.yaml
ancpbids/data/schema-files/: bids.xsd
ancpbids/data/schema-files/datatypes/: dwi.yaml  fmap.yaml  perf.yaml
ancpbids/data/schema-files/v1_6/: bids.xsd  bids.yaml
ancpbids/data/schema-files/v1_6/validation-rules/: vr-basic.xml
ancpbids/plugins/: plugin_dsloader.py  plugin_dssaver.py  plugin_dsvalidator.py  plugin_files_handlers.py  plugin_metadata_inheritance_principle.py  plugin_query.py  plugin_schema_patches.py
ancpbids/rules/: __init__.py  rules_files.py
bids/: __init__.py  dataset.py  files.py  model.py  pybids_compat.py  query.py  schema.py  validator.py
bids/rules/: __init__.py  rules_files.py
docs/source/: advancedQueries.rst  api.rst  arch.rst  conf.py  faq.rst  howto.rst  index.rst  installation.rst  requirements.txt  usage.rst  userDocCombined.rst  userDocMEG.rst  userDocQueryInformation.rst  validate.rst
notebooks/: first-steps.ipynb
schema/: bids.xsd  entities.yaml  modalities.yaml  schema_v1.8.0.json  schema_v1.9.0.json
schema/datatypes/: anat.yaml  beh.yaml  eeg.yaml  meg.yaml  pet.yaml
src/ancpbids/: __init__.py  model.py  pybids_compat.py  schema.py  validator.py
src/ancpbids/data/schema-files/: bids.xsd
src/ancpbids/data/schema-files/datatypes/: func.yaml  ieeg.yaml
src/ancpbids/rules/: __init__.py  rules_files.py
tests/: README.md  __init__.py  base_test_case.py  basic_tests.py  tests_auto__basic.py  tests_auto_derivative.py  tests_auto_query.py  tests_auto_regressions.py  tests_auto_validation.py  tests_auto_writing.py  tests_basic.py  tests_benchmark.py  tests_derivative.py  tests_manual_benchmark.py  tests_query.py  tests_schema.py  tests_validation.py  tests_writing.py
tests/auto/: test_arbitrary_dataset.py  test_basic.py  test_derivative.py  test_fetch_dataset.py  test_ignored_resources.py  test_query.py  test_regressions.py  test_schema.py  test_validation.py  test_writing.py
tests/data/ds005-small/: dataset_description.json
tests/data/ds005-small/sub-01/func/: sub-01_task-mixedgamblestask_run-01_bold.json
tests/data/ds005-small2/: dataset_description.json
tests/data/ds005-small2/derivatives/events/: dataset_description.json
tests/data/ds005_ignore/: .bidsignore
tests/data/synthetic/derivatives/fmriprep/: dataset_description.json
tests/data/synthetic_arbitrary/subfolder1/: notes.md
tests/data/synthetic_arbitrary/subfolder2/: data.csv
tests/manual/: Param_test_lazy_load.py  test_benchmark.py  test_lazy_load.py  test_performance_regressions.py
tests/optional/: test_torch.py
tools/: generate-model.sh  generatemodel.py  test.yaml
