[metadata]
name = ancpbids
version = 0.1.0
url = http://github.com/bids-standard/pybids
author = Erdal Karaca
author_email = erdal.karaca.de@gmail.com
maintainer = ANCP Lab, University of Oldenburg
maintainer_email = currentancp@listserv.uni-oldenburg.de
description = ancpbids: read/write/validate/query BIDS datasets
license = MIT
platforms = OS Independent
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
install_requires =
    lxml >= 4.6
    pandas >=0.23
tests_require =
    unittest
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
doc =
    sphinx >=2.2
    numpydoc
    sphinx_rtd_theme
docs =
    %(doc)s
plotting =
    graphviz
plottings =
    %(plotting)s
test =
    unittest
tests =
    %(test)s
ci_tests =
    %(test)s
    %(plotting)s
    codecov
    pytest-cov
    pytest-xdist
tutorial =
    nbconvert
    jupyter_client
    ipykernel
dev =
    %(doc)s
    %(test)s
    %(plotting)s

