[metadata]
name = ancpbids
version = 0.0.3
url = https://github.com/ANCPLabOldenburg/ancp-bids
author = Erdal Karaca
author_email = erdal.karaca.de@gmail.com
maintainer = ANCP Lab, University of Oldenburg
maintainer_email = currentancp@listserv.uni-oldenburg.de
description = Read/write/validate/query BIDS datasets
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
platforms = OS Independent
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.6
install_requires =
    lxml >= 4.6
    pandas >=0.23
tests_require =
    unittest
packages = find:
include_package_data = True

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = ancpbids/_version.py
versionfile_build = ancpbids/_version.py
tag_prefix =
parentdir_prefix =